# pybel

./: .appveyor.yml  .bumpversion.cfg  .codeclimate.yml  .codecov.yml  .coveragerc  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  justfile  pyproject.toml  requirements-rtfd.txt  requirements.txt  requirements_docs.txt  rtd-requirements.txt  setup.cfg  setup.py  tox-old.ini  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: cq.yml  docs.yml  tests.yml  zizmor.yml
artwork/: README.md
docs/: .buildinfo  Makefile  design.html  dirtynames.html  genindex.html  graph.html  index.html  logging.html  nestedstatements.html  objects.inv  parsers.html  py-modindex.html  releasing.html  roadmap.html  search.html  searchindex.js  todo.html  tutorial.html  utils.html
docs/_modules/: index.html
docs/_modules/pybel/: exceptions.html  graph.html  utils.html
docs/_sources/: design.txt  graph.txt  index.txt  logging.txt  parsers.txt  releasing.txt  roadmap.txt  tutorial.txt  utils.txt
docs/source/: authors.rst  cli.rst  commandline.rst  conf-old.py  conf.py  constants.rst  cookbook.rst  datamodel.rst  design.rst  dirtynames.rst  dsl.rst  examples.rst  extensions.rst  filters.rst  graph.rst  grouping.rst  index.rst  installation.rst  io.rst  logging.rst  manager.rst  nestedstatements.rst  overview.rst  parser.rst  parsers.rst  pipeline.rst  postmortem.rst  reference.rst  roadmap.rst  technology.rst  todo.rst  troubleshooting.rst  tutorial.rst  utilities.rst  utils.rst
docs/source/introduction/: installation.rst  overview.rst
docs/source/meta/: postmortem.rst  references.rst  technology.rst
docs/source/reference/: constants.rst  dsl.rst  hipathia.rst  io.rst  logging.rst  parser.rst
docs/source/topics/: cli.rst  troubleshooting.rst
docs/source/tutorials/: loading.ipynb
legacy/: aetionomy.py  bel2neo.py  mysql.py  neo2django.py  patterns.py  refactored_old.py
notebooks/: Compiling a BEL Document.ipynb  PyBEL AD Demo.ipynb  PyBEL Demo 1.ipynb  PyBEL Test Demo.ipynb  README.rst  SBGN Import Demo.ipynb  Using Gilda to Help Curate.ipynb
notebooks/hipathia_demo/: alzheimers.att  alzheimers.sif  convert_ad_to_hipathia.py  upgrade_nodelink_json.py
notebooks/hipathia_demo/alzheimers/: ADAM Metallopeptidase subgraph.att  ADAM Metallopeptidase subgraph.sif  APOE subgraph.att  APOE subgraph.sif  ATP binding cassette transport subgraph.att  ATP binding cassette transport subgraph.sif  Acetylcholine signaling subgraph.att  Acetylcholine signaling subgraph.sif  Akt subgraph.att  Akt subgraph.sif  Albumin subgraph.att  Albumin subgraph.sif  Alpha 2 macroglobulin subgraph.att  Alpha 2 macroglobulin subgraph.sif  (+192 more)
scripts/: run_drop_test.py  run_jgif.py
src/pybel/: __init__.py  __main__.py  canonicalize.py  cli.py  config.py  constants.py  constructors.py  cx.py  exceptions.py  ext.py  exthook.py  graph.py  graphManager.py  ground.py  grounding.py  io.py  language.py  repository.py  tokens.py  typing.py  utils.py  version.py
tests/: __init__.py  constant_helper.py  constants.py  example_edge.json  mocks.py  schema_constants.py  test_bel_repository.py  test_canonicalization.py  test_citation_utils.py  test_cli.py  test_cx.py  test_dsl.py  test_extensions.py  test_extras.py  test_grounding.py  test_import.py  test_jgif.py  test_local.py  test_manager_definitions.py  test_manager_drop.py  test_manager_edgestore.py  test_manager_graph.py  test_manager_mapper.py  test_manager_model.py  test_manager_namespaceCache.py  test_misordered.py  test_ndex.py  test_network_merge.py  test_owl.py  test_parse_abundance_modifier.py  test_parse_bel.py  test_parse_bel_functions.py  test_parse_bel_modifier.py  test_parse_bel_relations.py  test_parse_bel_variants.py  test_parse_biological.py  test_parse_complex.py  test_parse_control.py  test_parse_ensure.py  test_parse_evidence.py  (+20 more)
tests/bel/: Cytotoxic T-cell Signaling-2.0-Hs.json  isolated.bel  misordered.bel  run_server.sh  slushy.bel  small_corpus.bel  test.bel  testDB.db  test_an_1.belanno  test_annotations.bel  test_bel.bel  test_bel_1.bel  test_bel_2.bel  test_bel_3.bel  test_bel_4.bel  test_bel_b.bel  test_bel_owl_extension.bel  test_ns_1_updated.belns  thorough.bel
tests/belanno/: cell-line.belanno  mesh-diseases.belanno  mesh-endocrine-system.belanno
tests/beleq/: disease-ontology.beleq  mesh-diseases.beleq
tests/belns/: chebi.belns  disease-ontology.belns  go-biological-process.belns  go-cellular-component.belns  hgnc-human-genes.belns  mesh-diseases.belns  selventa-legacy-diseases.belns  test_nocache.belns
tests/cli/: test_graphml.py  test_json.py  test_neo4j.py  test_pickle.py
tests/owl/: ado.owl  pizza_onto.owl  wine.owl
tests/parser/: test_cli.py  test_import.py  test_parse_abundance_modifier.py  test_parse_bel.py  test_parse_identifier.py  test_parse_metadata.py  test_parse_pmod.py  test_utils.py
tests/test_io/: __init__.py  test_custom_json.py  test_hetionet.py  test_import.py  test_jgif.py  test_jupyter.py  test_mongodb.py  test_pynpa.py  test_spia.py  test_triples.py  test_tsv.py  test_umbrella_nodelink.py  test_umbrella_nodelink_json.py
tests/test_manager/: __init__.py  pmc_citation_data.json  pubmed_citation_data.json  test_citation_utils.py  test_connection.py  test_manager_definitions.py  test_manager_drop.py  test_manager_graph.py  test_manager_model.py  test_seeding.py
tests/test_parse/: __init__.py  test_parse_bel.py  test_parse_bel_relations.py  test_parse_bel_variants.py  test_parse_control.py  test_parse_identifier.py  test_parse_metadata.py  test_parse_utils.py  test_user_api.py
tests/test_schema/: test_nodes.py
tests/test_struct/: __init__.py  test_getters.py  test_grouping.py  test_node_utils.py  test_struct_filters.py  test_struct_graph.py  test_struct_mutation.py  test_struct_operations.py  test_struct_pipeline.py  test_summary_nodes.py
(+823 files in other folders)
