##########################
# Setup.py Configuration #
##########################
[metadata]
name = pybel
version = 0.14.5
description = Parsing, validation, compilation, and data exchange of Biological Expression Language (BEL)
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/pybel/pybel
download_url = https://github.com/pybel/pybel/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel/issues
    Source Code = https://github.com/pybel/pybel
    Documentation = https://pybel.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Biological Expression Language
    BEL
    Domain Specific Language
    DSL
    Systems Biology
    Networks Biology

[options]
install_requires =
    networkx>=2.1
    sqlalchemy
    click
    click-plugins
    bel_resources>=0.0.3
    more_itertools
    requests
    requests_file
    pyparsing
    tqdm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
indra =
    indra
jupyter =
    jinja2
    ipython
neo4j =
    py2neo
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    pybel = pybel.cli:main
pybel.object_importer =
    nodelink = pybel.io:from_nodelink_json
    bytes = pybel.io:from_bytes
    bel = pybel:from_bel_script
pybel.file_importer:
    nodelink = pybel.io:from_nodelink_json_file
    bytes = pybel.io:from_pickle
    bel = pybel:from_lines
pybel.object_exporter:
    nodelink = pybel.io:to_nodelink
    umbrella_nodelink = pybel.io:to_umbrella_nodelink
    graphdati = pybel.io:to_graphdati
    cx = pybel.io:to_cx
    jgif = pybel.io:to_jgif
    bytes = pybel.io:to_bytes
    bel = pybel.canonicalize:to_bel_lines
pybel.file_exporter:
    nodelink = pybel.io:to_nodelink_file
    nodelink_gz = pybel.io:to_nodelink_gz
    cx = pybel.io:to_cx_file
    cx_gz = pybel.io:to_cx_gz
    graphdati = pybel.io:to_graphdati_file
    graphdati_gz = pybel.io:to_graphdati_gz
    jgif = pybel.io:to_jgif_file
    jgif_gz = pybel.io:to_jgif_gz
    umbrella_nodelink = pybel.io:to_umbrella_nodelink_file
    umbrella_nodelink_gz = pybel.io:to_umbrella_nodelink_gz
    bytes = pybel.io:to_pickle
    bel = pybel.canonicalize:to_bel_script
    bel_gz = pybel.canonicalize:to_bel_script_gz
    tsv = pybel.io:to_tsv
    gsea = pybel.io:to_gsea

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pybel
omit =
    src/pybel/__main__.py
    src/pybel/cli.py
    src/pybel/io/indra.py
    src/pybel/io/web.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/pybel
    .tox/*/lib/python*/site-packages/pybel

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
