[options.entry_points]
console_scripts =
    pybel = pybel.cli:main
pybel.importer =
    bel                   = pybel.io.lines:from_bel_script
    bel.gz                = pybel.io.lines:from_bel_script_gz
    bel.nodelink.json     = pybel.io.nodelink:from_nodelink_file
    bel.nodelink.json.gz  = pybel.io.nodelink:from_nodelink_gz
    bel.jsonl             = pybel.io.sbel:from_sbel_file
    bel.jsonl.gz          = pybel.io.sbel:from_sbel_gz
    bel.cx.json           = pybel.io.cx:from_cx_file
    bel.cx.json.gz        = pybel.io.cx:from_cx_gz
    bel.graphdati.json    = pybel.io.graphdati:from_graphdati_file
    bel.graphdati.json.gz = pybel.io.graphdati:from_graphdati_gz
    bel.jgif.json         = pybel.io.jgif:from_jgif_file
    bel.jgif.json.gz      = pybel.io.jgif:from_jgif_gz
    bel.pickle            = pybel.io.gpickle:from_pickle
    bel.gpickle           = pybel.io.gpickle:from_pickle
    bel.pkl               = pybel.io.gpickle:from_pickle
    bel.pickle.gz         = pybel.io.gpickle:from_pickle_gz
    bel.gpickle.gz        = pybel.io.gpickle:from_pickle_gz
    bel.pkl.gz            = pybel.io.gpickle:from_pickle_gz
    indra.json            = pybel.io.indra:from_indra_statements_json_file

pybel.exporter =
    bel                   = pybel.canonicalize:to_bel_script
    bel.gz                = pybel.canonicalize:to_bel_script_gz
    bel.nodelink.json     = pybel.io.nodelink:to_nodelink_file
    bel.nodelink.json.gz  = pybel.io.nodelink:to_nodelink_gz
    bel.jsonl             = pybel.io.sbel:to_sbel_file
    bel.jsonl.gz          = pybel.io.sbel:to_sbel_gz
    bel.cx.json           = pybel.io.cx:to_cx_file
    bel.cx.json.gz        = pybel.io.cx:to_cx_gz
    bel.graphdati.json    = pybel.io.graphdati:to_graphdati_file
    bel.graphdati.json.gz = pybel.io.graphdati:to_graphdati_gz
    bel.jgif.json         = pybel.io.jgif:to_jgif_file
    bel.jgif.json.gz      = pybel.io.jgif:to_jgif_gz
    bel.pickle            = pybel.io.gpickle:to_pickle
    bel.gpickle           = pybel.io.gpickle:to_pickle
    bel.pkl               = pybel.io.gpickle:to_pickle
    bel.pickle.gz         = pybel.io.gpickle:to_pickle_gz
    bel.gpickle.gz        = pybel.io.gpickle:to_pickle_gz
    bel.pkl.gz            = pybel.io.gpickle:to_pickle_gz
    indra.json            = pybel.io.indra:to_indra_statements_json_file
    # No re-import
    bel.unodelink.json    = pybel.io.umbrella_nodelink:to_umbrella_nodelink_file
    bel.unodelink.json.gz = pybel.io.umbrella_nodelink:to_umbrella_nodelink_gz
    tsv                   = pybel.io.triples.api:to_triples_file
    gsea                  = pybel.io.extras:to_gsea

# Importers for PyKEEN
pykeen.triples.extension_importer =
    # Import BEL script to PyKEEN
    bel               = pybel.io.pykeen:get_triples_from_bel
    # Import BEL Graph pickle to PyKEEN
    bel.gpickle       = pybel.io.pykeen:get_triples_from_bel_pickle
    bel.pickle        = pybel.io.pykeen:get_triples_from_bel_pickle
    bel.pkl           = pybel.io.pykeen:get_triples_from_bel_pickle
    # Import BEL NodeLink JSON to PyKEEN
    bel.nodelink.json = pybel.io.pykeen:get_triples_from_bel_nodelink
pykeen.triples.prefix_importer =
    # Import BEL from BEL Commons to PyKEEN
    bel-commons       = pybel.io.pykeen:get_triples_from_bel_commons
